# Wynnpool

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  turbo.json
.github/workflows/: generate-changelog.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/bot/: .env.example  Dockerfile  package.json  tsconfig.json
apps/bot/src/: index.ts
apps/engine/: Cargo.toml
apps/engine/macros/: Cargo.toml
apps/engine/macros/src/: lib.rs
apps/engine/src/: config.rs  logger.rs  main.rs  redis_client.rs
apps/engine/src/scheduler/: node.rs
apps/engine/src/tasks/: annihilation.rs  mod.rs  server_status.rs  world_events.rs
apps/static/item-changelog-data/: 1741394144.json  1741999447.json  1742863591.json  1743209131.json  1745004672.json  1746233270.json  1747442963.json  1748134569.json  1755046407.json  1755132809.json  1755305442.json  1756860280.json  1758933884.json  1759020782.json  1760143430.json  1760230193.json  (+25 more)
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts
scripts/: generate_changelog.ts  generate_item_changelog.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: lastest-news.tsx  user-auth-display.tsx
src/data/: annihilation.json  aspect_pool.json  aspects_pool.json  lootrun_pool.json
src/lib/: colorUtils.ts  guildUtils.ts  itemUtils.ts
src/map/: colorMap.ts
src/types/: aspectType.ts  classType.tsx  guildType.tsx  itemType.ts  itemTypes.ts  playerType.ts
src/utils/: api.ts  types.ts  utils.ts
(+358 files in other folders)
