[package]
name = "wynnpool-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
wynnpool-engine-macros = { path = "./macros" }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "0.24", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
dotenvy = "0.15"
once_cell = "1.19"
inventory = "0.3"
